--- a/isu-reporting-system-api/.env
+++ b/isu-reporting-system-api/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:postgrespw@localhost:49153
+DATABASE_URL=postgres://zvzidycx:O6t8GDU2d1mZ-TVEXQcsfehzWHoxVdC_@tiny.db.elephantsql.com/zvzidycx
