--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://qquiquxz:XY6l3zPQcp04LSjlTa3mNzxkdYpibk-f@tiny.db.elephantsql.com/qquiquxz
+DATABASE_URL=postgres://postgres:postgrespw@localhost:49153
